--- a/index.html
+++ b/index.html
@@ -102,15 +102,83 @@
     </header>
 
     <!-- main section start -->
-    <main class="container mt-20 lg:px-12">
-        <section class="">
+    <main class="container mt-20">
+        <section class="lg:px-12">
             <h2 class="text-3xl text-center font-bold font-inter">Best offers for You</h2>
 
-            <div>
-                <div class="space-y-2 bg-[#FFBF0F] px-5 py-7 ">
-                    <h2 class="font-inter text-3xl font-bold #030712CC offer">15% OFF</h2>
-                    <p class="text-lg font-bold font-inter #030712CC">on your next purchase</p>
-                    <p class="text-base #03071280">use by January 2024</p>
+            <div class="flex lg:flex-row flex-col items-center justify-center gap-7">
+                <div class="flex lg:flex-row flex-col mt-10">
+                    <div class="space-y-2 bg-[#FFBF0F] px-16 py-7 offer border-r-2 border-dashed">
+                        <h2 class="font-inter text-3xl font-bold #030712CC">15% OFF</h2>
+                        <p class="text-lg font-bold font-inter #030712CC">on your next purchase</p>
+                        <p class="text-base #03071280">use by January 2024</p>
+                    </div>
+                    <div class=" space-y-2 bg-[#FFBF0F] px-8 py-7 offer flex flex-col items-center justify-center">
+                        <h2 class="font-inter text-3xl font-bold #030712CC">NEW15</h2>
+                        <p class="text-base #03071280">Coupon Code</p>
+                    </div>
+                </div>
+                <div class="flex mt-10 lg:flex-row flex-col">
+                    <div class="space-y-2 bg-[#F78C9C] px-16 py-7 offer border-r-2 border-dashed">
+                        <h2 class="font-inter text-3xl font-bold #030712CC">20% OFF</h2>
+                        <p class="text-lg font-bold font-inter #030712CC">on your next purchase</p>
+                        <p class="text-base #03071280">use by January 2024</p>
+                    </div>
+                    <div class="space-y-2 bg-[#F78C9C] px-8 py-7 offer flex flex-col items-center justify-center">
+                        <h2 class="font-inter text-3xl font-bold #030712CC">Couple 20</h2>
+                        <p class="text-base #03071280">Coupon Code</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="text-center mt-10">
+                <button
+                    class="border rounded-lg border-[#1DD100] px-4 py-3 text-inter text-lg font-bold text-[#1DD100]">See
+                    All Offers</button>
+            </div>
+        </section>
+        <section class=" mt-10 bg-[#F7F8F8] lg:mt-28 py-8 lg:py-16 rounded-t-[88px] border-2 border-t-[#1DD100]">
+            <div class="text-center space-y-3">
+                <h1 class="text-3xl font-inter font-bold ">P.H Paribahan</h1>
+                <p class="text-[#03071299] text-base font-normal font-inter w-9/12 mx-auto">Yes, you can run unit tests
+                    and view the results directly within the app. The integrated testing features allow for a
+                    streamlined .</p>
+            </div>
+            <div class="lg:px-12 mt-12">
+                <div class="flex lg:flex-row flex-col items-center justify-center">
+                    <div>
+                        <div class="flex flex-col lg:flex-row gap-7 justify-center items-center border-r-2 border-[#1DD100] border-dashed px-10">
+                            <div class="flex flex-col lg:flex-row items-center gap-5 justify-center">
+                                <div>
+                                    <img src="images/bus-logo.png" alt="">
+                                </div>
+                                <div class="space-y-2 lg:text-start text-center">
+                                    <h1 class="text-3xl font-bold font-inter ">Greenline Paribahan</h1>
+                                    <p class="font-inter text-base font-normal text-[#03071299]">Coach-009-WEB !
+                                        AC_Business
+                                    </p>
+                                </div>
+                            </div>
+                            <div
+                                class="w-[200px] bg-[#1DD10026] flex gap-2 px-3 py-3 rounded-lg justify-center items-center">
+                                <img src="images/seat-green.png" alt="">
+                                <h4 class="text-lg font-semibold font-inter text-[#1DD100]"><span
+                                        id="total-seat">40</span>
+                                    Seats left</h4>
+                            </div>
+                        </div>
+
+                        <div class="rounded-xl bg-[#F7F8F8]">
+
+                        </div>
+                    </div>
+                    <div class="flex flex-col items-center space-y-4 px-10">
+                        <img src="images/fare.png" alt="">
+                        <div class="text-center">
+                            <h1 class="text-3xl font-bold font-inter">550 Taka</h1>
+                            <p class="text-[24px] font-inter text-[#03071299]">Per Seat</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
