start seat plan section

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     All Offers</button>
             </div>
         </section>
-        <section class=" mt-10 bg-[#F7F8F8] lg:mt-28 py-8 lg:py-16 rounded-t-[88px] border-2 border-t-[#1DD100]">
+        <section class=" mt-10 bg-[#F7F8F8] lg:mt-28 py-8 lg:py-16 rounded-t-[88px] border border-t-[#1DD100]">
             <div class="text-center space-y-3">
                 <h1 class="text-3xl font-inter font-bold ">P.H Paribahan</h1>
                 <p class="text-[#03071299] text-base font-normal font-inter w-9/12 mx-auto">Yes, you can run unit tests
@@ -146,8 +146,8 @@
             </div>
             <div class="lg:px-12 mt-12">
                 <div class="flex lg:flex-row flex-col items-center justify-center">
-                    <div>
-                        <div class="flex flex-col lg:flex-row gap-7 justify-center items-center border-r-2 border-[#1DD100] border-dashed px-10">
+                    <div class="bg-white px-4 py-6 lg:px-10 lg:py-10 rounded-lg border-r-2 border-[#1DD100] border-dashed">
+                        <div class="flex flex-col lg:flex-row gap-7 justify-center items-center">
                             <div class="flex flex-col lg:flex-row items-center gap-5 justify-center">
                                 <div>
                                     <img src="images/bus-logo.png" alt="">
@@ -168,16 +168,51 @@
                             </div>
                         </div>
 
-                        <div class="rounded-xl bg-[#F7F8F8]">
+                        <div class="rounded-xl bg-[#F7F8F8] mt-7 px-8 py-6">
+                            <div class="flex items-center justify-between border-b-2 border-[#03071233] border-dashed">
+                                <p class="text-[#03071299] font-inter text-base font-normal pb-4">Route</p>
+                                <p class="font-inter text-lg font-bold pb-4">Dhaka - Sylhet</p>
+                            </div>
+                            <div class="flex items-center justify-between border-b-2 border-[#03071233] border-dashed">
+                                <p class="text-[#03071299] font-inter text-base font-normal pb-3 pt-5">Departure Time</p>
+                                <p class="font-inter text-lg font-bold pb-3 pt-5">9:00 PM</p>
+                            </div>
 
+                            <div class="mt-6 flex flex-col lg:flex-row gap-6">
+                                <div class="bg-[#0307120D] px-4 py-2 rounded-lg text-center">
+                                    <p class="font-bold font-inter text-base text-[#030712CC]">Boarding Point - Laxmipur</p>
+                                </div>
+                                <div class="bg-[#0307120D] px-4 py-2 rounded-lg text-center">
+                                    <p class="font-bold font-inter text-base text-[#030712CC]">Dropping Point - Bogura</p>
+                                </div>
+                                <div class="bg-[#0307120D] px-4 py-2 rounded-lg text-center">
+                                    <p class="font-bold font-inter text-base text-[#030712CC]">Est. Time - 11 Hour</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="flex flex-col items-center space-y-4 px-10">
+                    <div class="flex flex-col items-center space-y-4 bg-white px-4 py-6 lg:px-10 lg:py-32 rounded-lg">
                         <img src="images/fare.png" alt="">
                         <div class="text-center">
                             <h1 class="text-3xl font-bold font-inter">550 Taka</h1>
                             <p class="text-[24px] font-inter text-[#03071299]">Per Seat</p>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="mt-7 bg-[#F7F8F8]">
+            <div class="bg-white lg:px-12">
+                <h3 class="text-2xl font-inter font-bold text-[#030712]">Select Your Seat</h3>
+                <div class="border-y-2 border-dashed flex flex-col lg:flex-row justify-between">
+                    <div class="flex gap-2">
+                        <img src="images/seat-gray.png" alt="">
+                        <p class="text-[#03071280] font-inter text-lg font-semibold">Available</p>
+                    </div>
+                    <div class="flex gap-2">
+                        <img src="images/seat-green-filled.png" alt="">
+                        <p class="text-[#1DD100] font-inter text-lg font-semibold">Selected</p>
                     </div>
                 </div>
             </div>
