--- a/index.html
+++ b/index.html
@@ -232,19 +232,19 @@
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="A1"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">A1</button>
+                                    class="seat-number text-[#03071280] text-lg font-semibold font-inter rounded-lg">A1</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="A2"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">A2</button>
+                                    class="seat-number text-[#03071280] text-lg font-semibold font-inter rounded-lg">A2</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="A3"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">A3</button>
+                                    class="seat-number text-[#03071280] text-lg font-semibold font-inter rounded-lg">A3</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="A4"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">A4</button>
+                                    class="seat-number text-[#03071280] text-lg font-semibold font-inter rounded-lg">A4</button>
                             </div>
                         </div>
                         <div class="grid grid-cols-2 lg:grid-cols-5 md:grid-cols-2 gap-4 my-4">
@@ -253,19 +253,19 @@
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="B1"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">B1</button>
+                                    class="seat-number text-[#03071280] text-lg font-semibold font-inter rounded-lg">B1</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="B2"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">B2</button>
+                                    class="seat-number text-[#03071280] text-lg font-semibold font-inter rounded-lg">B2</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="B3"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">B3</button>
+                                    class="seat-number text-[#03071280] text-lg font-semibold font-inter rounded-lg">B3</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="B4"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">B4</button>
+                                    class="seat-number text-[#03071280] text-lg font-semibold font-inter rounded-lg">B4</button>
                             </div>
                         </div>
                         <div class="grid grid-cols-2 lg:grid-cols-5 md:grid-cols-2 gap-4 my-4">
@@ -274,19 +274,19 @@
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="C1"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">C1</button>
+                                    class="seat-number text-[#03071280] text-lg font-semibold font-inter rounded-lg">C1</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="C2"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">C2</button>
+                                    class="seat-number text-[#03071280] text-lg font-semibold font-inter rounded-lg">C2</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="C3"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">C3</button>
+                                    class="seat-number text-[#03071280] text-lg font-semibold font-inter rounded-lg">C3</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="C4"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">C4</button>
+                                    class="seat-number text-[#03071280] text-lg font-semibold font-inter rounded-lg">C4</button>
                             </div>
                         </div>
                         <div class="grid grid-cols-2 lg:grid-cols-5 md:grid-cols-2 gap-4 my-4">
@@ -295,19 +295,19 @@
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="D1"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">D1</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">D1</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="D2"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">D2</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">D2</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="D3"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">D3</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">D3</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="D4"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">D4</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">D4</button>
                             </div>
                         </div>
                         <div class="grid grid-cols-2 lg:grid-cols-5 md:grid-cols-2 gap-4 my-4">
@@ -316,19 +316,19 @@
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="E1"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">E1</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">E1</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="E2"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">E2</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">E2</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="E3"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">E3</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">E3</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="E4"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">E4</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">E4</button>
                             </div>
                         </div>
                         <div class="grid grid-cols-2 lg:grid-cols-5 md:grid-cols-2 gap-4 my-4">
@@ -337,19 +337,19 @@
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="F1"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">F1</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">F1</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="F2"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">F2</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">F2</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="F3"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">F3</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">F3</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="F4"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">F4</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">F4</button>
                             </div>
                         </div>
                         <div class="grid grid-cols-2 lg:grid-cols-5 md:grid-cols-2 gap-4 my-4">
@@ -358,19 +358,19 @@
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="G1"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">G1</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">G1</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="G2"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">G2</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">G2</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="G3"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">G3</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">G3</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="G4"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">G4</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">G4</button>
                             </div>
                         </div>
                         <div class="grid grid-cols-2 lg:grid-cols-5 md:grid-cols-2 gap-4 my-4">
@@ -379,19 +379,19 @@
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="H1"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">H1</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">H1</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="H2"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">H2</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">H2</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="H3"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">H3</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">H3</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="H4"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">H4</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">H4</button>
                             </div>
                         </div>
                         <div class="grid grid-cols-2 lg:grid-cols-5 md:grid-cols-2 gap-4 my-4">
@@ -400,19 +400,19 @@
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="I1"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">I1</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">I1</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="I2"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">I2</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">I2</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="I3"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">I3</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">I3</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="I4"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">I4</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">I4</button>
                             </div>
                         </div>
                         <div class="grid grid-cols-2 lg:grid-cols-5 md:grid-cols-2 gap-4 my-4">
@@ -421,19 +421,19 @@
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="J1"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">J1</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">J1</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="J2"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">J2</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">J2</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="J3"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">J3</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">J3</button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="J4"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg">J4</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">J4</button>
                             </div>
                         </div>
                     </div>
@@ -456,7 +456,7 @@
                         </div>
 
                         <!-- seat detail -->
-                        <div id="seat-numbers" class="seat-numbers border-b-2 border-[#03071233] mt-5">
+                        <div id="seat-details" class="seat-numbers border-b-2 border-[#03071233] mt-5">
 
                         </div>
 
