--- a/index.html
+++ b/index.html
@@ -421,7 +421,8 @@
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="J1"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">J1</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">J1
+                                </button>
                             </div>
                             <div class="bg-[#F7F8F8] px-5 py-3 text-center">
                                 <button id="J2"
@@ -431,9 +432,9 @@
                                 <button id="J3"
                                     class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">J3</button>
                             </div>
-                            <div class="bg-[#F7F8F8] px-5 py-3 text-center">
+                            <div class="px-5 py-3 text-center">
                                 <button id="J4"
-                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number">J4</button>
+                                    class="text-[#03071280] text-lg font-semibold font-inter rounded-lg seat-number bg-[#F7F8F8] ">J4</button>
                             </div>
                         </div>
                     </div>
@@ -489,15 +490,18 @@
                     <div class="my-7 lg:px-14">
                         <div>
                             <label class="font-inter font-bold text-base" for="name">Passenger Name*</label> <br>
-                            <input class="text-[#03071266] py-4 w-full px-3 border rounded-lg" type="text" placeholder="Enter your name" required>
+                            <input class="text-[#03071266] py-4 w-full px-3 border rounded-lg" type="text"
+                                placeholder="Enter your name" required>
                         </div>
                         <div class="mt-4">
                             <label class="font-inter font-bold text-base" for="name">Phone Number*</label> <br>
-                            <input class="text-[#03071266] py-4 w-full px-3 border rounded-lg" type="number" required placeholder="Enter your phone number">
+                            <input class="text-[#03071266] py-4 w-full px-3 border rounded-lg" type="number" required
+                                placeholder="Enter your phone number">
                         </div>
                         <div class="mt-4">
                             <label class="font-inter font-bold text-base" for="name">Email Id</label> <br>
-                            <input class="text-[#03071266] py-4 w-full px-3 border rounded-lg" type="email" required placeholder="Enter your email">
+                            <input class="text-[#03071266] py-4 w-full px-3 border rounded-lg" type="email" required
+                                placeholder="Enter your email">
                         </div>
                         <!-- next button -->
                         <div class="bg-[#1DD100] rounded-lg mt-7 py-3 text-center">
@@ -505,9 +509,11 @@
                         </div>
 
                         <div class="mt-7 flex lg:flex-row flex-col lg:justify-around text-center">
-                            <p><a href=""><u class="text-[#03071299] font-bold text-base font-inter">Terms and Conditions</u></a></p>
+                            <p><a href=""><u class="text-[#03071299] font-bold text-base font-inter">Terms and
+                                        Conditions</u></a></p>
 
-                            <p><a href=""><u class="text-[#03071299] font-bold text-base font-inter">Cancellation Policy</u></a></p>
+                            <p><a href=""><u class="text-[#03071299] font-bold text-base font-inter">Cancellation
+                                        Policy</u></a></p>
                         </div>
                     </div>
                 </div>
@@ -521,11 +527,14 @@
         <div class="flex lg:flex-row flex-col text-center lg:text-start lg:justify-between items-center">
             <div class="pb-5 space-y-2">
                 <h1 class="font-inter text-3xl font-bold text-white">P-Ticket</h1>
-                <p class="w-9/12 text-base text-white font-inter font-semibold text-center lg:text-start lg:mx-0 mx-auto">P-Ticket is a digital platform to make your daily commuting better.</p>
+                <p
+                    class="w-9/12 text-base text-white font-inter font-semibold text-center lg:text-start lg:mx-0 mx-auto">
+                    P-Ticket is a digital platform to make your daily commuting better.</p>
             </div>
             <div class="">
                 <h4 class="text-center text-lg font-semibold font-inter text-white">Download our app</h4>
-                <div class="flex gap-3 justify-center items-center bg-black border-2 border-white rounded-lg space-y-4 px-4 py-2">
+                <div
+                    class="flex gap-3 justify-center items-center bg-black border-2 border-white rounded-lg space-y-4 px-4 py-2">
                     <img src="images/playstore.png" alt="">
                     <div>
                         <span class="uppercase font-bold text-base font-inter text-white">get in on</span>
@@ -538,7 +547,8 @@
 
         <div class="flex lg:flex-row flex-col justify-between mt-7 text-center lg:text-start">
             <div>
-                <p class="text-[#FFFFFFB3] font-semibold font-inter text-base">@all rights reserved, P-Ticket services limited.2024</p>
+                <p class="text-[#FFFFFFB3] font-semibold font-inter text-base">@all rights reserved, P-Ticket services
+                    limited.2024</p>
             </div>
             <div class="flex lg:flex-row flex-col gap-10 text-center lg:text-start">
                 <p class="text-base font-bold font-inter text-white"><a href="">Terms & condition</a></p>
