added total price function

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <div class="flex flex-col items-center space-y-4 bg-white px-4 py-6 lg:px-10 lg:py-32 rounded-lg">
                         <img src="images/fare.png" alt="">
                         <div class="text-center">
-                            <h1 class="text-3xl font-bold font-inter">550 Taka</h1>
+                            <h1 class="text-3xl font-bold font-inter"><span id="fixed-price">550</span> Taka</h1>
                             <p class="text-[24px] font-inter text-[#03071299]">Per Seat</p>
                         </div>
                     </div>
